frontend/test/should_fail/retype_004.grg
using retype_model_001;

// forbidden, because write access to old node's attributes

rule r {
	pattern {
		x:TYPE1;
	}
	replace {
		z:TYPE2<x>;
		
		eval { x.a = z.a; }
	}
}

